# dexhero-gpu-bench

./: .gitignore  CMakeLists.txt  README.md  bench.cpp  bench.spec.md  bench_compute.cpp  bench_encoder.cpp  bench_raster.cpp  dexhero_bench.hpp  json.cpp  machine_id.cpp  sign.cpp
.github/workflows/: build-bench.yml
shaders/: compute.comp  raster.frag  raster.vert
